--- a/style.css
+++ b/style.css
@@ -18,9 +18,14 @@
 }
 
 .cal-button {
-   background-color: black;
+   background-color: rgb(145, 131, 131);
+   border: none;
    color: white;
    flex-basis: 24.5%;
-   font-size: 35px;
-   
+   font-size: 35px; 
+}
+
+button:hover {
+   background-color: aliceblue;
+   color: black;
 }
