--- a/style.css
+++ b/style.css
@@ -29,3 +29,9 @@ button:hover {
    background-color: rgb(188, 196, 204);
    color: black;
 }
+
+.display {
+   text-align: right;
+   font-size: 35px;
+   padding: 15px 10px;
+}
